<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9c27b0"
    android:fitsSystemWindows="true" >

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#f7f7f7"
        android:fitsSystemWindows="true" >

        <View
            android:id="@+id/purple"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:background="@color/purple" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_below="@id/purple"
            android:background="#d5d5d5" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/purple"
            android:layout_alignParentRight="true"
            android:fontFamily="sans-serif-thin"
            android:paddingBottom="10dp"
            android:paddingRight="7dp"
            android:paddingTop="7dp"
            android:text="@string/version"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/background_material_light" />

        <TextView
            android:id="@+id/about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/purple"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:fontFamily="sans-serif-thin"
            android:gravity="center|center_vertical"
            android:text="@string/about"
            android:textColor="#fafafa"
            android:textSize="40sp"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/app_info_about"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView2"
            android:layout_centerHorizontal="true"
            android:paddingTop="10dp"
            android:text="@string/about_padding_warning"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </RelativeLayout>

</FrameLayout>