<com.nirhart.parallaxscroll.views.ParallaxScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="630dp"
    android:background="@color/background_material_light"
    android:longClickable="false"
    android:orientation="vertical"
    android:overScrollMode="never"
    android:scrollbars="none"
    android:scrollingCache="true"
    app:parallax_factor="2.3"
    tools:context="com.kyler.mockup.activities.FirstRunDialogActivity" >

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true" >

        <ImageView
            android:id="@+id/iconImage"
            android:layout_width="75dp"
            android:layout_height="220dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:adjustViewBounds="true"
            android:background="#FF3f51b5"
            android:paddingBottom="7dp"
            android:paddingTop="7dp"
            android:scaleType="fitCenter"
            android:src="@drawable/simplemockupindigo_compressed"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iconImage"
            android:layout_centerHorizontal="true"
            android:background="@color/background_material_light"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingTop="10dp"
            android:text="@string/dialog_hello"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#FF242424" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView1"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@color/background_material_light"
            android:fontFamily="sans-serif-light"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingTop="10dp"
            android:text="@string/dialog_hello_two"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#242424"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView2"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@color/background_material_light"
            android:fontFamily="sans-serif-light"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingTop="10dp"
            android:text="@string/more_info"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#242424"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/enjoy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView3"
            android:background="@color/background_material_light"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:paddingBottom="25dp"
            android:paddingTop="300dp"
            android:text="@string/enjoy"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#242424"
            tools:ignore="HardcodedText" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/enjoy"
            android:background="#26000000"
            android:paddingTop="10dp" />

        <Button
            android:id="@+id/okButton"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@id/divider"
            android:background="@drawable/okay_button"
            android:fitsSystemWindows="true"
            android:fontFamily="sans-serif-thin"
            android:text="@string/okay"
            android:textColor="#e5e8ed"
            android:textSize="18dp"
            android:textStyle="normal"
            tools:ignore="SpUsage" />
    </RelativeLayout>

</com.nirhart.parallaxscroll.views.ParallaxScrollView>